objects/SLX__Change_Object__c.object
<CustomObject>
    <description>Custom Object to manage the Change Control process for SFDC. Allows tracking of requests and the implementation of specific changes.</description>
    <fields>
        <fullName>SLX__Change_Control__c</fullName>
        <label>Change Control</label>
        <referenceTo>SLX__Change_Control__c</referenceTo>
        <relationshipName>Change_Objects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SLX__Change_Notes__c</fullName>
        <description>Any description as to the change made</description>
        <label>Change Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SLX__Item_Changed__c</fullName>
        <description>Selection of which detailed sub-item is being modified.</description>
        <label>Item Changed</label>
        <picklist>
            <controllingField>SLX__Object_Affected__c</controllingField>
            <picklistValues>
                <fullName>Standard Field</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Field</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Page Layout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Link</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assignment Rule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Record Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom App</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Object</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Tab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom s-Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dashboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profiles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Groups</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sharing Rules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Policies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workflow Rules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Updates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Validation Rules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLX__Object_Affected__c</fullName>
        <description>Select which is the object in SFDC that will be modified</description>
        <label>Object Affected</label>
        <picklist>
            <picklistValues>
                <fullName>Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaigns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Object</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dashboards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expense Tracker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecasts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid Time Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trainer Commission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Timecard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Interface</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Users</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Change Object</label>
    <nameField>
        <displayFormat>CCO-{00000000}</displayFormat>
        <label>Change Control Object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Objects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>